--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -38,21 +38,28 @@
         <div class="navbar-end">
             <a href="" class="navbar-item">
                 <span class="icon has-text-danger">
-                    <i class="ion-ionic logo-github"></i>
+                    <i class="fab fa-instagram"></i>
                 </span>
             </a>
             <a href="" class="navbar-item">
                 <span class="icon has-text-info">
-                    <i class="fa fa-linkedin-square"></i>
+                    <i class="fab fa-linkedin" aria-hidden="true"></i>
                 </span>
             </a>
             <a href="" class="navbar-item">
                 <span class="icon has-text-success">
-                    <i class="fa fa-github"></i>
+                    <i class="fab fa-github"></i>
                 </span>
             </a>
+
+            <div class="buttons">
+                <a class="button is-primary dn">
+                    <strong>Download Resume</strong>
+                </a>
+            </div>
         </div>
 
+        
         
     </div>
 </nav>
