--- a/src/app/Components/about-section/about-section.component.html
+++ b/src/app/Components/about-section/about-section.component.html
@@ -5,6 +5,14 @@
         </figure>
     </div>
     <div class="abt block">
-        <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio modi voluptatibus placeat cupiditate dolorem similique perferendis dolorum quaerat enim, minima ad culpa nemo impedit odio ipsa debitis in a rem! -->
+        <div class="ttl">
+            <h1 class="title tlt">
+                <span><img width="50" src="../../../assets/waving-hand_1f44b.png"></span>
+                Hey, I am <span class="nm">Ashish Sahu</span><br>
+                <span class="tp mt-5">
+                    <ngtypewriter [StringList]='list' [speed]='1000'></ngtypewriter>
+                </span>
+            </h1>
+        </div>
     </div>
 </div>
