Stack list implementation complete

--- a/src/app/Components/about-section/about-section.component.html
+++ b/src/app/Components/about-section/about-section.component.html
@@ -1,4 +1,4 @@
-<div class="abt-section">
+<div class="abt-section ab">
     <div class="dp mt-5 block">
         <figure class="image ">
             <img class="is-rounded " src="../../../assets/dp2.png">
@@ -8,7 +8,7 @@
         <div class="ttl">
             <h1 class="title tlt">
                 <span><img width="50" src="../../../assets/waving-hand_1f44b.png"></span>
-                Hey, I am <span class="nm">Ashish Sahu</span><br>
+                Hey, I am <span class="nm">ASHISH SAHU</span><br>
                 <span class="tp mt-5">
                     <ngtypewriter [StringList]='list' [speed]='1000'></ngtypewriter>
                 </span>
