Deployed Till Date ✅

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -32,6 +32,15 @@
                 </span>
             </a>
 
+            <a class="navbar-item">
+                <span class="icon-text has-text-success">
+                    <span class="icon">
+                        <i class="fa fa-phone-square"></i>
+                    </span>
+                    <span>CONTACTS</span>
+                </span>
+            </a>
+
             
         </div>
 
