--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
 <app-about-section></app-about-section>
 <app-list-section></app-list-section>
+<app-project-section></app-project-section>
+<app-footer-section></app-footer-section>
