--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -33,7 +33,7 @@
             </a>
 
             <a class="navbar-item">
-                <span class="icon-text has-text-success">
+                <span class="icon-text has-text-info">
                     <span class="icon">
                         <i class="fa fa-phone-square"></i>
                     </span>
@@ -45,17 +45,17 @@
         </div>
 
         <div class="navbar-end">
-            <a href="" class="navbar-item">
+            <a href="" class="ft navbar-item">
                 <span class="icon has-text-danger">
                     <i class="fab fa-instagram"></i>
                 </span>
             </a>
-            <a href="" class="navbar-item">
+            <a href="" class="ft navbar-item">
                 <span class="icon has-text-info">
                     <i class="fab fa-linkedin" aria-hidden="true"></i>
                 </span>
             </a>
-            <a href="" class="navbar-item">
+            <a href="" class="ft navbar-item">
                 <span class="icon has-text-success">
                     <i class="fab fa-github"></i>
                 </span>
