--- a/src/app/Components/about-section/about-section.component.html
+++ b/src/app/Components/about-section/about-section.component.html
@@ -8,7 +8,7 @@
         <div class="ttl">
             <h1 class="title tlt">
                 <span><img width="50" src="../../../assets/waving-hand_1f44b.png"></span>
-                Hey, I am <span class="nm">ASHISH SAHU</span><br>
+                Hey, I am <span class="nm">Ashish Sahu</span><br>
                 <span class="tp mt-5">
                     <ngtypewriter [StringList]='list' [speed]='1000'></ngtypewriter>
                 </span>
