--- a/src/app/Components/project-card/project-card.component.html
+++ b/src/app/Components/project-card/project-card.component.html
@@ -1,25 +1,24 @@
 <div class="card">
     <div class="card-image">
         <figure class="image is-4by3">
-            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+            <img [src]=project.image alt="Placeholder image">
         </figure>
     </div>
     <div class="card-content">
         <div class="media">
             <div class="media-content">
-                <p class="title is-4">Project Title</p>
-                <p class="subtitle is-6">Summary</p>
+                <p class="title is-4">{{ project.title }}</p>
+                <p class="subtitle is-6"><b>{{project.summary}}</b></p>
             </div>
         </div>
 
-        <div class="content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nihil mollitia ut rem doloremque velit nulla
-            eius praesentium vitae expedita.
+        <div class="content dsc">
+            {{project.desc}}
             <br>
         </div>
     </div>
     <footer class="card-footer">
-        <a href="#" class="card-footer-item">Github</a>
-        <a href="#" class="card-footer-item">Live</a>
+        <a [href]="project.github" target="_blank" class="card-footer-item g-btn">Github</a>
+        <a [href]="project.deployed" target="_blank" class="card-footer-item l-btn">Live</a>
     </footer>
 </div>
