--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -23,14 +23,6 @@
                 </span>
             </a>
 
-            <a class="navbar-item">
-                <span class="icon-text has-text-success">
-                    <span class="icon">
-                        <i class="fa fa-window-restore"></i>
-                    </span>
-                    <span>PROJECTS</span>
-                </span>
-            </a>
 
             <a class="navbar-item">
                 <span class="icon-text has-text-info">
@@ -45,24 +37,26 @@
         </div>
 
         <div class="navbar-end">
-            <a href="" class="ft navbar-item">
-                <span class="icon has-text-danger">
-                    <i class="fab fa-instagram"></i>
-                </span>
-            </a>
-            <a href="" class="ft navbar-item">
-                <span class="icon has-text-info">
-                    <i class="fab fa-linkedin" aria-hidden="true"></i>
-                </span>
-            </a>
-            <a href="" class="ft navbar-item">
-                <span class="icon has-text-success">
-                    <i class="fab fa-github"></i>
-                </span>
-            </a>
+            <div class="icccn">
+                <a href="" class="ft navbar-item">
+                    <span class="icon has-text-danger">
+                        <i class="fab fa-instagram"></i>
+                    </span>
+                </a>
+                <a href="" class="ft navbar-item">
+                    <span class="icon has-text-info">
+                        <i class="fab fa-linkedin" aria-hidden="true"></i>
+                    </span>
+                </a>
+                <a href="" class="ft navbar-item">
+                    <span class="icon has-text-success">
+                        <i class="fab fa-github"></i>
+                    </span>
+                </a>
+            </div>
 
-            <div class="buttons">
-                <a class="button is-primary dn">
+            <div class="buttons ll-btn">
+                <a target="_blank" href="https://drive.google.com/file/d/1zJ6sP19b6x6QKP9N22il5JtNSCebh126/view?usp=sharing" class="button is-primary dn">
                     <strong>Download Resume</strong>
                 </a>
             </div>
