--- a/src/app/Components/project-section/project-section.component.css
+++ b/src/app/Components/project-section/project-section.component.css
@@ -2,6 +2,8 @@
     width: 20rem;
 }
 
+
+
 .project-main{
     margin-top: 5rem;
 }
@@ -15,6 +17,59 @@
     align-items: center;
 }
 
-h1{
+h1,p{
     text-align: center;
+}
+
+.filter{
+    margin: 2rem;
+}
+
+.filter form{
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+.article {
+    position: relative;
+    /* padding: 0rem 1.5rem; */
+    width: auto;
+    height: auto;
+    margin: 5px;
+    float: left;
+    background-color: #f0f0f0;
+    /* border: 2px solid #50bcf2; */
+    box-sizing: border-box;
+    border-radius: 0.3rem;
+}
+
+.article div {
+    padding: 0rem 1.5rem;
+    border-radius: 0.3rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 25px;
+    transition: .5s ease;
+}
+
+.article input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 140px;
+    height: 100px;
+    opacity: 0;
+    cursor: pointer;
+}
+
+input[type=checkbox]:checked~div {
+    background-color: #91e9cc;
 }
