--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -38,19 +38,20 @@
 
         <div class="navbar-end">
             <div class="icccn">
-                <a href="" class="ft navbar-item">
-                    <span class="icon has-text-danger">
-                        <i class="fab fa-instagram"></i>
-                    </span>
-                </a>
-                <a href="" class="ft navbar-item">
+                
+                <a href="https://www.linkedin.com/in/ashishsahu2/" target="_blank" class="ft navbar-item">
                     <span class="icon has-text-info">
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
                     </span>
                 </a>
-                <a href="" class="ft navbar-item">
+                <a href="https://github.com/ashishsahu1" target="_blank" class="ft navbar-item">
                     <span class="icon has-text-success">
                         <i class="fab fa-github"></i>
+                    </span>
+                </a>
+                <a href="https://www.instagram.com/ashhishh99/" target="_blank" class="ft navbar-item">
+                    <span class="icon has-text-danger">
+                        <i class="fab fa-instagram"></i>
                     </span>
                 </a>
             </div>
