Model Component created and implemented

--- a/src/app/Components/footer-section/footer-section.component.html
+++ b/src/app/Components/footer-section/footer-section.component.html
@@ -7,17 +7,17 @@
             </p>
         </div>
         <div class="icon-bx">
-            <a href="" class="footer-icon">
+            <a href="https://www.instagram.com/ashhishh99/" class="footer-icon">
                 <span class="icon has-text-danger">
                     <i class="fab fa-instagram"></i>
                 </span>
             </a>
-            <a href="" class="footer-icon">
+            <a href="https://www.linkedin.com/in/ashishsahu2/" class="footer-icon">
                 <span class="icon has-text-info">
                     <i class="fab fa-linkedin" aria-hidden="true"></i>
                 </span>
             </a>
-            <a href="" class="footer-icon">
+            <a href="https://github.com/ashishsahu1" class="footer-icon">
                 <span class="icon has-text-success">
                     <i class="fab fa-github"></i>
                 </span>
