--- a/src/app/Components/navbar/navbar.component.css
+++ b/src/app/Components/navbar/navbar.component.css
@@ -52,3 +52,13 @@ img{
         font-size: larger;
     }
 }
+
+.what{
+    display: flex;
+    gap: 1rem;
+}
+
+.cnt{
+    display: flex;
+    gap: 1rem;
+}
