--- a/src/app/Components/about-section/about-section.component.html
+++ b/src/app/Components/about-section/about-section.component.html
@@ -1,7 +1,7 @@
 <div class="abt-section ab">
     <div class="dp mt-5 block">
         <figure class="image ">
-            <img class="is-rounded " src="../../../assets/dp2.png">
+            <img class="is-rounded " src="../../../assets/dpp2.jpeg">
         </figure>
     </div>
     <div class="abt block">
